<resources>
    <string name="app_name">Luyện Thi Toán</string>
    <string name="action_settings">Cài đặt</string>

    <string name="tab_daiso">Đại số</string>
    <string name="tab_hinhhoc">Hình học</string>
    <string name="tab_giaitich">Giải tích</string>
    <string name="tab_lythuyet">Lý thuyết</string>
    <string name="tab_vidu">Ví dụ</string>
    <string name="tab_phuongphapgiai">Phương pháp giải</string>
    <string name="tab_baitapmau">Bài tập mẫu</string>
    <string name="tab_listbaihoc">Danh sác bài học</string>

    <!--Left menu-->
    <string name="trangchu">Trang chủ</string>
    <string name="kienthuccanban">Kiến thức căn bản</string>
    <string name="luyenthi">Luyện thi</string>
    <string name="dethimau">Đề thi mẫu</string>
    <string name="maytinh">Công cụ hỗ trợ</string>
    <string name="taiungdung">Tải dữ liệu</string>
    <string name="thongtinungdung">Thông tin ứng dụng</string>
    <string name="thoat">Thoát</string>
    <string name="chitiet">Thông tin chi tiết</string>

    <!--Header-->
    <string name="thongtincanhan">Thông tin cá nhân</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="msg_time_out">Sorry! bạn cần kết nối Internet.</string>


    <!--Sync data-->
    <string name="title_download_data">Syncing data...</string>
    <string name="msg_can_not_connect_to_network">Không có kết nối mạng.</string>
    <string name="msg_download_data">Dữ liệu sẵn sàng</string>
    <string name="msg_data_has_been_saved">Dữ liệu đã được lưu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_show">Show Activity</string>

    <!--infomation app-->
    <string name="app_name_title">Tên ứng dụng: </string>
    <string name="app_author_title">Họ tên: </string>
    <string name="app_author">Lê Thị Huỳnh Như</string>
    <string name="app_mssv_title">MSSV: </string>
    <string name="app_mssv">B1204192</string>
    <string name="app_version_title">Version: </string>
    <string name="app_version">1.0</string>
    <string name="close">Đóng</string>
    <string name="cau">Câu </string>

    <!--button-->
    <string name="btn_back">Trước</string>
    <string name="btn_next">Sau</string>
    <string name="btn_check">Đáp án</string>
    <string name="btn_close">Đóng</string>

    <!--dialog exit app-->
    <string name="close_app">Bạn có muốn thoát ứng dụng?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
</resources>
