<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/left_trangchu"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/trangchu" />
        <item
            android:id="@+id/left_kienthuccanban"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/kienthuccanban" />
        <item
            android:id="@+id/left_luyenthi"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/luyenthi" />
        <item
            android:id="@+id/left_dethimau"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/dethimau" />
        <item
            android:id="@+id/left_maytinh"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/maytinh" />
    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/left_thongtinungdung"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/thongtinungdung" />
        <item
            android:id="@+id/left_thoat"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/thoat" />
    </group>
</menu>
