<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/layout_padding_65"
    android:paddingLeft="@dimen/layout_padding_10"
    android:paddingRight="@dimen/layout_padding_10"
    android:id ="@+id/linear_detail">

    <!-- app name-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/layout_padding_15"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size_16"
            android:paddingRight="@dimen/layout_padding_10"
            android:text="@string/app_name_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size_16"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/app_name"/>
    </LinearLayout>

    <!--app author-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/layout_padding_15"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/layout_padding_10"
            android:textSize="@dimen/title_size_16"
            android:text="@string/app_author_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size_16"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/app_author"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/layout_padding_15"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size_16"
            android:paddingRight="@dimen/layout_padding_10"
            android:text="@string/app_mssv_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size_16"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/app_mssv"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/layout_padding_15"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size_16"
            android:paddingRight="@dimen/layout_padding_10"
            android:text="@string/app_version_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size_16"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/app_version"/>
    </LinearLayout>
</LinearLayout>