<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/layout_padding_65"
    android:paddingLeft="@dimen/layout_padding_10"
    android:paddingRight="@dimen/layout_padding_10"
    android:background="@color/md_white"
    android:id="@+id/linear_detail">

    <!-- app name-->
    <TextView
        android:id="@+id/text_view_title_cauhoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="@dimen/title_size_20"/>

    <io.github.kexanie.library.MathView
        android:id="@+id/mathview_noidung_cauhoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_padding_5"
        auto:engine="MathJax">
    </io.github.kexanie.library.MathView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.9">

        <io.github.kexanie.library.MathView
            android:id="@+id/mathview_noidung_dapan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auto:engine="MathJax">
        </io.github.kexanie.library.MathView>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linear_show_button_tracnghiem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/layout_padding_10"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_back"
            android:layout_width="@dimen/layout_padding_100"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:textColor="@color/md_white"
            android:textStyle="bold"
            android:text="@string/btn_back"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="@dimen/layout_padding_100"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/md_white"
            android:textStyle="bold"
            android:paddingLeft="@dimen/layout_padding_10"
            android:text="@string/btn_next"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/layout_padding_5"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_close"
            android:layout_width="@dimen/layout_padding_100"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:paddingLeft="@dimen/layout_padding_5"
            android:textColor="@color/md_white"
            android:textStyle="bold"
            android:text="@string/btn_close"/>
    </LinearLayout>
</LinearLayout>